# eulerpublisher

./: .gitignore  AUTHORS  ChangeLog  README.en.md  README.md  eulerpublisher.db  install.sh  install_log.txt  requirement.txt  requirements.txt  setup.cfg  setup.py  uninstall.sh
config/cloudimg/: cloudimg.yaml
config/rpm/: init.yaml
configs/: copr  eulerpublisher.conf  filter.yml  version_filter.yml  version_rules.yml
docs/design/: ARCHITECTURE-EulerPublisher发布系统.md  PRD-EulerPublisher发布系统.md
etc/container/: registry.yaml  tags.yaml
eulerpublisher/: eulerpublisher.py
eulerpublisher-ui/: README.md  package-lock.json  package.json
eulerpublisher-ui/src/: App.vue  main.js
eulerpublisher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
eulerpublisher/api/: api.py
eulerpublisher/cloudimg/: cli.py  cloudimg.py
eulerpublisher/container/: cli.py  container.py
eulerpublisher/database/: database.py
eulerpublisher/engine/: engine.py
eulerpublisher/factory/: factory.py
eulerpublisher/monitor/: monitor.py
eulerpublisher/orchestrator/: orchestrator.py
eulerpublisher/publisher/: __init__.py  publisher.py
eulerpublisher/rpm/: cli.py  eur.py  rpm.py
eulerpublisher/tracker/: tracker.py
eulerpublisher/ui/: ui.py
eulerpublisher/utils/: config.py  constants.py  date.py  exceptions.py  logger.py  utils.py
knowledge/: knowledge.yaml
models/all-MiniLM-L6-v2/: config.json
templates/product/: cann.dockerfile  mindspore.dockerfile  openeuler.dockerfile  python.dockerfile
update/image/: build.sh  update.py
(+128 files in other folders)
