[metadata]
name = eulerpublisher
summary = An unified toolset to publish openEuler images, including container, cloud, WSL etc.


[files]
packages =
    eulerpublisher

data_files =
    etc/eulerpublisher/configs/ = configs/*
    etc/eulerpublisher/tests/ = tests/*
    etc/eulerpublisher/templates/ = templates/*

[entry_points]
console_scripts =
    eulerpublisher = eulerpublisher.eulerpublisher:main

[wheel]
universal = 1