[metadata]
name = eulerpublisher
summary = An unified toolset to publish openEuler images, including container, cloud, WSL etc.


[files]
packages =
    eulerpublisher

data_files =
    etc/eulerpublisher/configs/ = configs/*
    etc/eulerpublisher/tests/ = tests/*
    etc/eulerpublisher/templates/ = templates/*
    etc/eulerpublisher/assets/ = assets/*
    etc/eulerpublisher/knowledge/ = knowledge/*
    etc/eulerpublisher/models/ = models/*

[entry_points]
console_scripts =
    eulerpublisher = eulerpublisher.eulerpublisher:main

[wheel]
universal = 1